--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.3/lottie_svg.min.js"></script>
-    <title>Gift for my Bebita</title>
+    <title>Gift for Ibraa</title>
     <link rel="icon" href="icons/tab-icon.png"/>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -55,9 +55,9 @@
                     <div class="envelope">
                         <div class="letter">
                             <div class="text">
-                                <strong style="font-size: .89rem;">Dear My Bebita,</strong>
+                                <strong style="font-size: .89rem;">Dear Ibraa,</strong>
                                 <p style="text-indent: 15px;">
-                                    Happy Valentine's Day my Love, Thank you for being the most incredible partner anyone could ever ask for. Your kindness, your strength, and your unwavering support mean everything to me. I love you more than words can express, today, every day and forever.
+                                    "Hari ini, Lanaa langitkan semua doa terbaik Lanaa untuk Ibraa. Semoga hal-hal yang membuat Ibraa runtuh turut menjadi alasan Ibraa untuk tumbuh. Semoga dunia senantiasa menjaga Ibraa di mana pun Ibraa berada. Semoga hari-hari Ibraa selalu diiringi cinta yang tidak pernah ada batasnya. Dan semoga, senyum manis dari orang-orang tersayang Ibraa yang selalu Ibraa usahakan itu kini sudah terlaksana."
                                 </p>
                                 <p class="love">I LOVE YOU SO MUCH</p>
                                 <div class="pana">
@@ -97,7 +97,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Bebita Chiquitita</h1>
+                        <h1 class="font-extrabold text-lg">Player 1</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg">
@@ -117,8 +117,8 @@
                         <img class="-rotate-12 w-full" src="icons/herbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">About Lorenita</h1>
-                        <p class="text-base">Cutieta/Pogita/Wifeyta</p>
+                        <h1 class="font-extrabold text-5xl">About Lanaa</h1>
+                        <p class="text-base">Kawaii/Gorgeous/Angelic</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
@@ -158,7 +158,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Bebito Chiquitito</h1>
+                        <h1 class="font-extrabold text-lg">Player 2</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg" alt="">
@@ -178,8 +178,8 @@
                         <img class="-rotate-12 w-full" src="icons/hisbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">About Marquito</h1>
-                        <p class="text-base">Cutieto/Pogito/Hubbyto</p>
+                        <h1 class="font-extrabold text-5xl">About Ibraa</h1>
+                        <p class="text-base">Animeh/Imaginative/Perfect</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
@@ -233,7 +233,7 @@
                     </div>
                  
                 </div>
-                <h1 class="text-center font-bold text-base">Since October 13, 2022</h1>
+                <h1 class="text-center font-bold text-base">Since October 07, 2006</h1>
             </div>
 
 
