--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <div class="sound-bars"></div>
                 </div>
                 <div class="track-info -space-y-1">
-                    <div class="trackname">Only</div>
+                    <div class="trackname">Happy birthday</div>
                     <div class="trackartist">Track Artist</div>
                 </div>
                 <div class="track-nav">
