--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <!-- IMAGES -->
                 <div class="flex justify-center">
                     <div class="w-44 flex justify-center py-5 gap-3">
-                        <img class="w-40" src="img/icons/Lanaa 1.jpeg" alt="">
-                        <img class="w-40" src="img/icons/Lanaa 2.jpeg" alt="">
-                        <img class="w-40" src="img/icons/Lanaa 3.jpeg" alt="">
+                        <img class="w-40" src="icons/Lanaa 1.jpeg" alt="">
+                        <img class="w-40" src="icons/Lanaa 2.jpeg" alt="">
+                        <img class="w-40" src="icons/Lanaa 3.jpeg" alt="">
                     </div>
                 </div>
             </div>
