--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
                 <!-- IMAGES -->
                 <div class="flex justify-center">
                     <div class="w-44 flex justify-center py-5 gap-3">
-                        <img class="w-40" src="img/Bebita/1.1.jpeg" alt="">
-                        <img class="w-40 object-cover" src="img/Bebita/5.jpg" alt="">
-                        <img class="w-40 object-cover" src="img/Bebita/2.2.jpeg" alt="">
+                        <img class="w-40" src="icons/Ibraa1.jpeg" alt="">
+                        <img class="w-40 object-cover" src="icons/Ibraa2.jpeg" alt="">
+                        <img class="w-40 object-cover" src="icons/Ibraa3.jpeg" alt="">
                     </div>
                 </div>
             </div>
