--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- BACKGROUND -->
     <div class="background">
         <div class="one">
-            <img src="img/back.jpg" alt="">
+            <img src="icons/GalaxyBG.jpg" alt="">
             <div class="container">
                 <div class="envelope-wrapper">
                     <div class="envelope">
