--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             <div class="text">
                                 <strong style="font-size: .89rem;">Dear Ibraa,</strong>
                                 <p style="text-indent: 15px;">
-                                    "Semoga serta mulia usia mu, kau pijaki bumi dengan segala indah mu. Semoga langkah-langkah manis mu itu, diiringi Tuhan, atas nama mu, doa ku selalu sepenuhnya.  Hari ini, Lanaa langitkan semua doa terbaik Lanaa untuk Ibraa. Semoga hal-hal yang membuat Ibraa runtuh turut menjadi alasan Ibraa untuk tumbuh. Semoga dunia senantiasa menjaga Ibraa di mana pun Ibraa berada. Semoga hari-hari Ibraa selalu diiringi cinta yang tidak pernah ada batasnya. Dan semoga, senyum manis dari orang-orang tersayang Ibraa yang selalu Ibraa usahakan itu kini sudah terlaksana."
+                                    "Hari ini, Lanaa langitkan semua doa terbaik Lanaa untuk Ibraa. Semoga hal-hal yang membuat Ibraa runtuh turut menjadi alasan Ibraa untuk tumbuh. Semoga dunia senantiasa menjaga Ibraa di mana pun Ibraa berada. Semoga hari-hari Ibraa selalu diiringi cinta yang tidak pernah ada batasnya. Dan semoga, senyum manis dari orang-orang tersayang Ibraa yang selalu Ibraa usahakan itu kini sudah terlaksana."
                                 </p>
                                 <p class="love">I LOVE YOU SO MUCH</p>
                                 <div class="pana">
